# bottlerocket-ecs-updater

./: .gitignore  .golangci.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.licenses  Makefile  QUICKSTART.md  Quickstart.md  README.md
.github/ISSUE_TEMPLATE/: feature.md
.github/workflows/: cfn-lint.yml  ci.yml  golangci-lint.yml  updater-ci.yaml
integ/: Cargo.toml  README.md  cleanup.sh  common.sh  deny.toml  run-updater.sh  setup.sh
integ/src/: aws.rs  error.rs  integ_args.rs  main.rs
integ/src/aws/: api.rs  client.rs  error.rs  mod.rs
integ/stacks/: cluster.yaml  integ-shared.yaml
scripts/: load-bottlerocket-sdk.sh
stacks/: bottlerocket-ecs-updater.yaml  integ.yaml
updater/: .dockerignore  Cargo.toml  Dockerfile  aws.go  aws_test.go  deny.toml  go.mod  go.sum  main.go  main_test.go  mock_test.go
updater/src/: args.rs  aws.rs  check.rs  common.rs  error.rs  lib.rs  main.rs  updater.rs
updater/src/aws/: api.rs  client.rs  error.rs  mod.rs
updater/src/tests/: mock.rs
updater/tests/: check_updates.rs  integ.rs  mock.rs  mocks.rs
