[package]
name = "bottlerocket-ecs-updater"
version = "0.1.0"
authors = ["Shailesh Gothi <gothisg@amazon.com>", "Matt Briggs <brigmatt@amazon.com>"]
edition = "2018"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.8"
log = "0.4"
rusoto_core = { version = "0.46", default-features = false, features = [ "rustls" ] }
rusoto_credential = "0.46"
rusoto_ecs = { version = "0.46", default-features = false, features = [ "rustls" ] }
rusoto_signature = "0.46"
rusoto_ssm = { version = "0.46", default-features = false, features = [ "rustls" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snafu = "0.6"
structopt = "0.3"
tokio = { version = "1", features = ["macros", "process"] }

[dev-dependencies]
mock-it = "0.3.0"
